Bug 161360 - fix lost cursor position at pressing Escape at image selection in text tables
Summary: fix lost cursor position at pressing Escape at image selection in text tables
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.5
Keywords:
Depends on:
Blocks: Writer-Tables Cell-Management Authors
  Show dependency treegraph
 
Reported: 2024-05-31 09:56 UTC by László Németh
Modified: 2024-06-04 09:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2024-05-31 09:56:22 UTC
Description:
In tables, when the selected image was anchored as character at beginning of the table row, pressing Escape resulted completely lost text cursor (after a short blinking, not visible, missing typing etc.) or – in the case of floating tables – cursor in a bad position (after the table instead of before the image).


Steps to Reproduce:
1. Open the test document of Bug 160836 (https://bugs.documentfoundation.org/attachment.cgi?id=193871).
2. Click on the image to get its handles.
3. Press Escape to deselect the image.

Actual Results:
The cursor is positioned after the table.

Expected Results:
The cursor is positioned before the image, in the same floating table and table cell.


Reproducible: Always


User Profile Reset: No

Additional Info:
This is also about the convenient selection of the floating table. After the fix, it will be possible to select the floating table by pressing Escape twice after selecting the content of the image.
Comment 1 Commit Notification 2024-05-31 18:47:17 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/014e5f559a9acf319af24c721dbe6b0bc3bc5882

tdf#161360 sw: fix cursor position deselecting image in table

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-06-04 09:59:27 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/96a4b71bc39ab4f16dd9cc609d4d218dd36dd8d6

tdf#161360 sw: fix cursor position deselecting image in table

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.